fixing close button on mobile navigation

--- a/css/queries.css
+++ b/css/queries.css
@@ -15,6 +15,10 @@
     height: 52px;
   }
 
+  #btn__menu--close {
+    display: block;
+  }
+
   .mobile .nav__container {
     background: linear-gradient(
       120deg,
